--- a/kicad/bluetooth_breadboard_adapter/bluetooth_breadboard_adapter.cmp
+++ b/kicad/bluetooth_breadboard_adapter/bluetooth_breadboard_adapter.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Thu 25 Sep 2014 13:43:12 CEST
+Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Thu 25 Sep 2014 15:17:47 CEST
 
 BeginCmp
 TimeStamp = /542131F5;
@@ -25,7 +25,7 @@ BeginCmp
 TimeStamp = /54200037;
 Reference = U1;
 ValeurCmp = BLK-MD-SPK-B;
-IdModule  = BLK-MD-SPK-B.mod:BLK-MD-SPK-B;
+IdModule  = BLK-MD-SPK-B:BLK-MD-SPK-B;
 EndCmp
 
 EndListe
