--- a/kicad/vwcdpic/tht/emulator.cmp
+++ b/kicad/vwcdpic/tht/emulator.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Thu 02 Oct 2014 18:51:03 CEST
+Cmp-Mod V01 Created by Cvpcb 0.201412011747+5309~19~ubuntu14.04.1-product   date = Thu 04 Dec 2014 17:41:56 CET
 
 BeginCmp
 TimeStamp = /52D0328F;
@@ -288,10 +288,10 @@ IdModule  = Sockets_DIP:DIP-8__300_ELL;
 EndCmp
 
 BeginCmp
-TimeStamp = /52D02F38;
+TimeStamp = /548091CF;
 Reference = U2;
 ValeurCmp = 78L05;
-IdModule  = Discret:TO92;
+IdModule  = my_modules:TO92-STABIL;
 EndCmp
 
 BeginCmp
