--- a/kicad/arduino_based_cdc_emulator/atmega88/arduino_based_cdc_emu.cmp
+++ b/kicad/arduino_based_cdc_emulator/atmega88/arduino_based_cdc_emu.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2014-jul-16 BZR unknown)-product   date = Wed 08 Oct 2014 17:32:53 CEST
+Cmp-Mod V01 Created by Cvpcb 0.201505031001+5637~23~ubuntu14.04.1-product   date = Tue 05 May 2015 07:03:49 CEST
 
 BeginCmp
 TimeStamp = /530C7703;
@@ -46,7 +46,7 @@ BeginCmp
 TimeStamp = /54357812;
 Reference = P2;
 ValeurCmp = CONN_2;
-IdModule  = Pin_Headers:Pin_Header_Straight_1x02;
+IdModule  = Pin_Headers:Pin_Header_Straight_1x05;
 EndCmp
 
 BeginCmp
